create pop up cookies

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
     margin: 0;
+    height: 1900px;
     background: #2a2734;
     text-align: center;
     font-family: sans-serif;
@@ -85,3 +86,31 @@ span {
     background-image: url(cars/img9.jpg);
     transform: rotateY(320deg) translateZ(430px);
 }
+/*cookies*/
+.cookies-msg{
+    width: 80%;
+    background-color: #fff;
+    position: fixed;
+    bottom: 5%;
+    left: 50%;
+    transform: translate(-50%);
+    border-radius: 10px;
+    border: 3px solid #d01212;
+}
+.cookies-txt{
+    color: black;
+    text-align: justify;
+    font-size: 18px;
+    padding: 20px;
+}
+.cookies-msg .cookies-btn{
+    margin-left: 30px;
+}
+.cookies-msg .cookies-btn button{
+    background-color: #050505;
+    color: #fff;
+    font-weight: 700;
+    font-size: 18px;
+    box-shadow: 3px 3px 5px rgb(9, 36, 171);
+}
+
